# TriggeredAvg

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DEVELOPER_GUIDE.md  README.md  compile_flags.txt
.github/workflows/: build-and-test.yml  release.yml
Resources/: Version.rc.in
Source/: CMakeLists.txt  DataCollector.cpp  DataCollector.h  MultiChannelRingBuffer.cpp  MultiChannelRingBuffer.h  OpenEphysLib.cpp  PluginVersion.h.in  SingleTrialBuffer.cpp  SingleTrialBuffer.h  TriggerSource.cpp  TriggeredAvgActions.cpp  TriggeredAvgActions.h  TriggeredAvgNode.cpp  TriggeredAvgNode.h
Source/Ui/: DisplayMode.h  GridDisplay.cpp  GridDisplay.h  PerformanceTimer.h  PopupConfigurationWindow.cpp  PopupConfigurationWindow.h  SinglePlotPanel.cpp  SinglePlotPanel.h  TimeAxis.cpp  TimeAxis.h  TriggeredAvgCanvas.cpp  TriggeredAvgCanvas.h  TriggeredAvgEditor.cpp  TriggeredAvgEditor.h
Tests/: .gitignore  CMakeLists.txt  QUICK_REFERENCE.md  README.md  SETUP_SUMMARY.md  SingleTrialBufferTests.cpp  TestHelpers.h  juce_colour_stub.cpp  test_DataCollector.cpp  test_DataStore.cpp  test_MultiChannelRingBuffer.cpp  test_SingleTrialBuffer.cpp  test_SingleTrialBuffer_RawPointers.cpp
